# managed-agents-codelab

./: .env.example  .gitignore  README.md  daily-digest-agent-workshop.md  download_pdf.py  manage_agents.py  pyproject.toml  stage1_hello.py  stage2_stream.py  stage4_pdf.py  stage5_save.py  stage6_refine.py
backend/: main.py  models.py
backend/routes/: agents.py  runs.py  skills.py
backend/services/: agent_client.py  gcs_skill.py  pdf_generator.py  skill_registry.py
codelab/: README.md  codelab.md  generate.sh  index.lab.md
codelab/solution/: .env.example  config.py  pyproject.toml  stage1_hello.py  stage2_stream.py  stage3_voice.py  stage4_skill.py  stage5_multiturn.py  stage6_save.py  stage7_invoke.py
codelab/solution/backend/: main.py
codelab/solution/frontend/: package-lock.json  package.json
codelab/starter/: .env.example  pyproject.toml  stage1_hello.py  stage2_stream.py  stage3_voice.py  stage4_skill.py  stage5_multiturn.py  stage6_save.py  stage7_invoke.py
codelab/starter/backend/: models.py
codelab/starter/frontend/: README.md
docs/: codelab.json  index.html
docs/superpowers/plans/: 2026-05-31-daily-digest-app.md
docs/superpowers/specs/: 2026-05-31-daily-digest-app-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: api.ts  types.ts
frontend/src/components/: Layout.tsx  RefinePanel.tsx
frontend/src/pages/: Agents.tsx  RunView.tsx  (+4 more)
refs/: intro_managed_agents_python (2).ipynb  intro_managed_agents_python (4).ipynb  intro_skill_registry.ipynb  ma1.md  ma2.md  ma4.md
workshop/: config.py  stage3_voice.py
(+12 files in other folders)
